<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CapturaActivity" >

    <SurfaceView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_captura_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_preview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:onClick="iniciarCaptura"
        android:text="@string/btn_captura_i" />

    <Button
        android:id="@+id/btn_captura_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_captura_i"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:onClick="finalizarCaptura"
        android:text="@string/btn_captura_f" />

    <TextView
        android:id="@+id/lbl_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_captura_f"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_estado"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ltxt_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbl_estado"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lbl_tiempo_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ltxt_estado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/lbl_tiempo_max"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ltxt_tiempo_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbl_tiempo_max"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lbl_tiempo_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ltxt_tiempo_max"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_tiempo_min"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ltxt_tiempo_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbl_tiempo_min"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/lbl_tiempo_prom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ltxt_tiempo_min"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_tiempo_promedio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ltxt_tiempo_prom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbl_tiempo_prom"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lbl_frames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ltxt_tiempo_prom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/lbl_frames"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ltxt_frames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbl_frames"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_vacio"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>